--- a/vue/api/package.json
+++ b/vue/api/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
     "bootstrap-css-only": "^4.4.1",
+    "chart.js": "^2.9.4",
     "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
     "jquery": "^3.3.1",
@@ -33,6 +34,7 @@
     "select2": "^4.0.6-rc.1",
     "simple-crypto-js": "^3.0.0",
     "vue": "^2.6.12",
+    "vue-chartkick": "^0.6.1",
     "vue-focus": "^2.1.0",
     "vue-js-modal": "^1.3.28",
     "vue-ladda": "0.0.15",
