uploading changes: - added Welcome User 'X' on TopBar - added FA Icons to Sidebars - added SCM logo - modified Limpiar button -> rounded button - modified margin of Buscar input-text - fixed dropdown of Incidencias, now it shows process of the selected SCM

--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,10 @@
         "process-timeout": 1800,
         "fxp-asset": {
             "enabled": false
-        }
+        },
+      "allow-plugins": {
+         "yiisoft/yii2-composer": true
+      }
     },
     "repositories": [
         {
