--- a/vue/api/package.json
+++ b/vue/api/package.json
@@ -35,12 +35,15 @@
     "simple-crypto-js": "^3.0.0",
     "vue": "^2.6.12",
     "vue-chartkick": "^0.6.1",
+    "vue-element-resize-detector": "^1.0.6",
+    "vue-fabric-wrapper": "^0.3.71",
     "vue-focus": "^2.1.0",
     "vue-js-modal": "^1.3.28",
     "vue-ladda": "0.0.15",
     "vue-next": "0.0.1",
     "vue-plugin-load-script": "^1.2.0",
     "vue-property-decorator": "^8.0.0",
+    "vue-resize-directive": "^1.2.0",
     "vue-router": "^3.4.7",
     "vue-select": "^2.6.4",
     "vue-select2": "^0.2.6",
